Fix x direction overflow. Background img width can not set to 100vw.

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ body {
   position: relative;
   background-color: whitesmoke;
   font-family: "Montserrat", Helvetica, sans-serif;
-  width: 100vw; }
+  overflow-x: hidden; }
 
 a:hover {
   text-decoration: none; }
@@ -429,7 +429,7 @@ body {
   position: relative;
   background-color: whitesmoke;
   font-family: "Montserrat", Helvetica, sans-serif;
-  width: 100vw; }
+  overflow-x: hidden; }
 
 a:hover {
   text-decoration: none; }
@@ -470,7 +470,7 @@ a:hover {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden; }
   .b-background-img img {
@@ -1121,11 +1121,13 @@ a:hover {
   width: 100%;
   height: 100vh; }
   .b-main > section {
-    overflow: hidden;
     position: absolute;
     width: 100%;
     padding-top: 6.5rem;
     perspective: 1800px; }
+    @media (max-width: 66.875em) {
+      .b-main > section {
+        padding: 0 1rem; } }
   .b-main > section:target {
     z-index: 8; }
 
@@ -1143,7 +1145,6 @@ a:hover {
   z-index: 5; }
   @media (max-width: 66.875em) {
     .b-content {
-      margin: 0 1rem;
       margin-top: 5rem;
       margin-bottom: 3rem; } }
 
