--- a/sass/components/_background-img.scss
+++ b/sass/components/_background-img.scss
@@ -2,7 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  //   If use 100vw will cause a x direction overflow
+  width: 100%;
   height: 100vh;
   overflow: hidden;
 
